--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -4,15 +4,20 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "overblog/graphql-bundle": "^0.11.12",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.11",
         "symfony/orm-pack": "^1.0",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "symfony/serializer": "^4.0",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
+        "overblog/graphiql-bundle": "^0.1.2",
         "symfony/dotenv": "^4.0"
     },
     "config": {
