--- a/symfony/config/services.yaml
+++ b/symfony/config/services.yaml
@@ -10,7 +10,9 @@ services:
         public: false       # Allows optimizing the container by removing unused services; this also means
                             # fetching services directly from the container via $container->get() won't work.
                             # The best practice is to be explicit about your dependencies anyway.
-
+        bind:
+            $linkedInToken: "%env(string:LINKEDIN_TOKEN)%"
+            $linkedInUserId: "%env(string:LINKEDIN_USER_ID)%"
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -22,6 +24,24 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+
+    App\Social\DraftShareContent:
+        tags: ['social_network']
+
+    App\Social\LinkedinShareContent:
+        tags: ['social_network']
+
+    App\Resolver\:
+        resource: '../src/Resolver'
+        tags: ['overblog_graphql.resolver']
+
+    planet.resolver:
+        alias: App\Resolver\PlanetResolver
+        public: true
+
+    App\Mutation\:
+        resource: '../src/Mutation'
+        tags: ['overblog_graphql.mutation']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
